fix(ChatTile): fix alignments

--- a/app/client/stylesheets/components/ChatTile.scss
+++ b/app/client/stylesheets/components/ChatTile.scss
@@ -29,6 +29,7 @@
         flex: 1 1 auto;
         overflow: hidden;
         padding-left: spacing(1);
+        padding-top: 3px;
 
         .pa-Paragraph {
             line-height: 1.5em;
@@ -46,6 +47,7 @@
     }
 
     &__time {
+        padding-top: 3px;
         padding-left: spacing(1);
         text-align: right;
         vertical-align: bottom;
